--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":".",
   "name": "sarymogol",
   "version": "0.1.0",
   "private": true,
@@ -10,7 +11,6 @@
     "aos": "^2.3.4",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
-    "i": "^0.3.7",
     "i18next": "^22.4.5",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.0",
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.0",
+    "react-i18next": "^12.1.1",
     "react-icons": "^4.7.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.5.0",
